# easy-amqp

./: README.md  pyproject.toml
.github/workflows/: test.yml
easy_amqp/: EasyAMQP.py
examples/: example_0.py  example_1.py  example_2.py  example_3.py  example_4.py  example_5.py
