[project]
name = "easy_amqp"
version = "0.0.0"
description = "easy use of rabbitmq"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" } # Füge eine Lizenz hinzu
keywords = ["rabbitmq", "amqp", "async", "message-queue", "pika"] 
dependencies = [
    "pika>=1.3.2"
]
authors = [
  { name = "Marc Rüting", url = "https://github.com/marcr240" } 
]
classifiers = [ # Wichtige Metadaten für PyPI
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications"
]
[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "requests>=2.32.4",
    "testcontainers>=4.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
